--- a/requirements.txt
+++ b/requirements.txt
@@ -14,7 +14,7 @@ Flask-Moment==0.6.0
 Flask-SQLAlchemy==2.3.2
 Flask-WTF==0.14.2
 itsdangerous==1.1.0
-Jinja2==2.10
+Jinja2>=2.10.1
 Mako==1.0.7
 MarkupSafe==1.1.0
 PyJWT==1.7.1
@@ -23,8 +23,8 @@ python-dotenv==0.10.1
 python-editor==1.0.4
 pytz==2018.9
 six==1.12.0
-SQLAlchemy==1.2.17
-urllib3==1.24.1
+SQLAlchemy>=1.3.0
+urllib3>=1.24.2
 visitor==0.1.3
 Werkzeug==0.14.1
 WTForms==2.2.1
