--- a/requirements.txt
+++ b/requirements.txt
@@ -26,7 +26,7 @@ six==1.12.0
 SQLAlchemy>=1.3.0
 urllib3>=1.24.2
 visitor==0.1.3
-Werkzeug==0.14.1
+Werkzeug>=0.14.1
 WTForms==2.2.1
 gunicorn
 psycopg2
